# Client4Business

./: README.md
approval-service/: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
approval-service/alembic/: env.py
approval-service/alembic/versions/: 001_initial_schema.py
approval-service/src/approval_service/: config.py  dependencies.py  main.py
approval-service/src/approval_service/api/middleware/: error_handler.py  idempotency.py  logging_ctx.py  workspace.py
approval-service/src/approval_service/api/v1/: response.py
approval-service/src/approval_service/application/: dto.py  interfaces.py
approval-service/src/approval_service/application/services/: approval_service.py  audit_service.py  rule_service.py
approval-service/src/approval_service/common/: clock.py  pagination.py
approval-service/src/approval_service/domain/: events.py  exceptions.py  fsm.py
approval-service/src/approval_service/domain/models/: __init__.py  approval_request.py  approval_rule.py  approval_step.py  enums.py
approval-service/src/approval_service/infrastructure/database/: base.py  session.py
approval-service/src/approval_service/infrastructure/logging/: filters.py
approval-service/src/approval_service/infrastructure/outbox/: publisher.py  writer.py
approval-service/tests/integration/: conftest.py  test_audit.py  test_decisions.py  test_errors.py  test_health.py  test_idempotency.py  test_requests.py  test_workspace_isolation.py
approval-service/tests/unit/domain/: test_approval_request.py  test_fsm.py
(+22 files in other folders)
